--- a/src/main/resources/templates/distributorDetails.html
+++ b/src/main/resources/templates/distributorDetails.html
@@ -37,7 +37,7 @@
             <div class="col-md-12">
                 <div class="contact">
                     <div class="controls" th:if="*{pictures.size()>0}">
-                        <img th:src="@{*{pictures[0].url}}" alt="cover" class="cover">
+                        <img th:src="@{*{pictures[0]}}" alt="cover" class="cover">
                     </div>
                     <div class="controls" th:unless="*{pictures.size()>0}">
                         <img src="../static/images/distributor-8-499357.png" th:src="@{/images/distributor-8-499357.png}" alt="cover" class="cover">
