--- a/src/main/resources/templates/addDeck.html
+++ b/src/main/resources/templates/addDeck.html
@@ -4,10 +4,6 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -21,57 +17,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../css/addOffer.css"/>
+    <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
-    <link rel="stylesheet" href="../static/css/addDeck.css"/>
-    <link rel="stylesheet" href="../static/css/bootstrap/bootstrapNav.css"/>
+    <script src="../../js/sidebar.js" type="module"></script>
 
-    <script src="../static/js/sidebar.js" type="module"></script>
-
-    <link rel="icon" href="../static/images/ace-of-spades.png">
-    <title>Victory</title>
+    <th:block th:repalce="~{/fragments/head.html}"/>
 </head>
 <body>
 
 <header>
 
     <nav id="nav" class="navbar navbar-expand">
-
-        <a href="/"><img src="../static/images/emblem.png"></a>
-
-        <ul id="menu">
-            <li><a href="/catalog">Catalog</a></li>
-            <li><a href="/search">Offers</a></li>
-            <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
-                </span>
-            <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
-            </span>
-        </ul>
-
-        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
+        <th:block th:replace="~{/fragments/navigation.html}"/>
     </nav>
 
 </header>
 
-<div id="wrapper">
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li><a href="#">Catalog</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wishlist</a></li>
-            <li><a href="#">Logout</a></li>
-        </ul>
-    </div>
-</div>
+<th:block th:replace="~{/fragments/sidebar.html}"/>
 
 <main>
 
@@ -83,7 +46,7 @@
                         <div class="row">
 
                             <div class="col">
-                                <label href="#" class="active" id="login-form-link">Create Deck</label>
+                                <label class="active" id="login-form-link">Create Deck</label>
                             </div>
 
                         </div>
@@ -93,12 +56,12 @@
                             <div class="col-lg-12">
 
 
-                                <form id="deck-form" method="post"
+                                <form id="deck-form" th:method="post" th:action="@{/decks/add}"
                                       role="form" style="display: block;">
 
 
                                     <div class="form-group">
-                                        <input type="text" name="username" id="title" tabindex="1"
+                                        <input type="text" name="title" id="title" tabindex="1"
                                                class="form-control" placeholder="Title" value="">
                                     </div>
                                     <div class="form-group">
@@ -122,11 +85,20 @@
                                                class="form-control" placeholder="Description">
                                     </div>
                                     <div class="form-group">
-                                        <select class="selectpicker" multiple data-live-search="true">
-                                            <option>Mustard</option>
-                                            <option>Ketchup</option>
-                                            <option>Relish</option>
+                                        <select class="selectpicker" multiple data-live-search="true" name="categories" required
+                                                th:field="*{categories}" th:errorclass="is-invalid"
+                                        >
+                                            <option value=""></option>
+                                            <option th:value="STANDARD">Standard</option>
+                                            <option th:value="GAME">Game</option>
+                                            <option th:value="MAGIC">Magic</option>
+                                            <option th:value="CARDISTRY">Cardistry</option>
+                                            <option th:value="VINTAGE">Vintage</option>
+                                            <option th:value="POKER">Poker</option>
+                                            <option th:value="GAFFED">Gaffed</option>
+                                            <option th:value="MARKED">Marked</option>
                                         </select>
+                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('categories'), '; ')}"></div>
                                     </div>
                                     <div class="form-group" id="image-group">
                                         <label for="formFile" class="custom-file-upload">
@@ -156,8 +128,6 @@
                                                    class="form-control btn btn-makeOffer" value="Create">
                                         </div>
                                     </div>
-
-
                                 </form>
 
                             </div>
