fixed some cloudinary issues and the form image input

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="../../css/account.css"/>
     <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
+    <link rel="icon" href="../../images/ace-of-spades.png">
+    <title>Victory</title>
+
     <th:block th:repalce="~{/fragments/head.html}"/>
 
 </head>
