--- a/src/main/resources/templates/addAddress.html
+++ b/src/main/resources/templates/addAddress.html
@@ -23,6 +23,8 @@
 
     <script src="../../js/sidebar.js" type="module"></script>
 
+    <link rel="icon" href="../../images/ace-of-spades.png">
+    <title>Victory</title>
 
     <th:block th:repalce="~{/fragments/head.html}"/>
 </head>
