--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -25,6 +25,9 @@
     <script src="../../js/sidebar.js" type="module"></script>
     <link rel="stylesheet" href="../../css/deckDetails.css"/>
 
+    <link rel="icon" href="../../images/ace-of-spades.png">
+    <title>Victory</title>
+
     <th:block th:replace="~{/fragments/head.html}"></th:block>
 </head>
 <body>
