--- a/src/main/resources/templates/addDeck.html
+++ b/src/main/resources/templates/addDeck.html
@@ -22,6 +22,9 @@
 
     <script src="../../js/sidebar.js" type="module"></script>
 
+    <link rel="icon" href="../../images/ace-of-spades.png">
+    <title>Victory</title>
+
     <th:block th:repalce="~{/fragments/head.html}"/>
 </head>
 <body>
