--- a/src/main/resources/templates/addDistributor.html
+++ b/src/main/resources/templates/addDistributor.html
@@ -22,6 +22,9 @@
 
     <script src="../../js/sidebar.js" type="module"></script>
 
+    <link rel="icon" href="../../images/ace-of-spades.png">
+    <title>Victory</title>
+
     <th:block th:repalce="~{/fragments/head.html}"/>
 </head>
 <body>
@@ -56,8 +59,8 @@
                             <div class="col-lg-12">
 
 
-                                <form id="distributor-form" th:method="POST" th:action="@{/distributors/add}"
-                                      role="form" style="display: block;" th:object="${distributor}">
+                                <form id="distributor-form" th:method="POST" enctype="multipart/form-data"
+                                      th:action="@{/distributors/add}" role="form" style="display: block;" th:object="${distributor}">
 
 
                                     <div class="form-group">
