--- a/src/main/resources/templates/distributorDetails.html
+++ b/src/main/resources/templates/distributorDetails.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="../../css/distributorDetails.css"/>
     <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
+    <link rel="icon" href="../../images/ace-of-spades.png">
+    <title>Victory</title>
+
     <th:block th:replace="~{fragments/head.html}"></th:block>
 
 </head>
