--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,6 +19,9 @@
 
     <link rel="stylesheet" type="text/css" href="../../css/home.css"/>
 
+    <link rel="icon" href="../../images/ace-of-spades.png">
+    <title>Victory</title>
+
     <th:block th:include="~{/fragments/head.html}"/>
 
 </head>
