Implemented adding creator functionality

--- a/src/main/resources/templates/addAddress.html
+++ b/src/main/resources/templates/addAddress.html
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 
 
-    <link rel="stylesheet" href="../../css/addOffer.css"/>
+    <link rel="stylesheet" href="../../css/addForm.css"/>
     <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
     <script src="../../js/sidebar.js" type="module"></script>
@@ -44,13 +44,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3" id="address-form-cont">
+            <div class="col-md-6 col-md-offset-3" id="form-cont">
                 <div class="panel panel-offer">
                     <div class="panel-heading">
                         <div class="row">
 
                             <div class="col">
-                                <label class="active" id="address-form-link">Add Address</label>
+                                <label class="active" id="form-link">Add Address</label>
                             </div>
 
                         </div>
@@ -94,8 +94,8 @@
 
                                     <div class="form-group">
                                         <div class="col-sm-6 col-sm-offset-3" id="submit-cont">
-                                            <input type="submit" name="address-submit" id="add-address" tabindex="4"
-                                                   class="form-control btn btn-makeOffer" value="Add address">
+                                            <input type="submit" name="add-submit" id="add-submit" tabindex="4"
+                                                   class="form-control btn btn-add" value="Add address">
                                         </div>
                                     </div>
                                 </form>
