--- a/src/main/resources/templates/addOffer.html
+++ b/src/main/resources/templates/addOffer.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 
 
-    <link rel="stylesheet" href="../../css/addOffer.css"/>
+    <link rel="stylesheet" href="../../css/addForm.css"/>
     <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
     <script src="../../js/sidebar.js" type="module"></script>
@@ -141,9 +141,9 @@
 
                                     <div class="form-group">
                                         <div class="col-sm-6 col-sm-offset-3" id="submit-cont">
-                                            <input type="submit" name="offer-add-submit" id="offer-add-submit"
+                                            <input type="submit" name="add-submit" id="add-submit"
                                                    tabindex="4"
-                                                   class="form-control btn btn-makeOffer" value="Create">
+                                                   class="form-control btn btn-add" value="Create">
                                         </div>
                                     </div>
                                 </form>
