--- a/src/main/resources/static/css/addForm.css
+++ b/src/main/resources/static/css/addForm.css
@@ -169,7 +169,7 @@ select:hover{
 }
 
 .filter-option-inner-inner:before{
-    content: "Title: ";
+    content: "Categories: ";
 }
 
 .filter-option-inner-inner{
@@ -182,7 +182,7 @@ select:hover{
 
 /*submit button*/
 
-.btn-addDistributor {
+.btn-add {
     background-color: var(--dense-gold);
     outline: none;
     color: var(--grey);
@@ -194,7 +194,7 @@ select:hover{
     max-width: 100%;
 }
 
-.btn-addDistributor:hover {
+.btn-add:hover {
     color: #000;
     background: #fff;
     transition: background-color .4s;
