--- a/src/main/resources/templates/addCreator.html
+++ b/src/main/resources/templates/addCreator.html
@@ -49,7 +49,7 @@
                         <div class="row">
 
                             <div class="col">
-                                <label class="active" id="form-link">Create Deck</label>
+                                <label class="active" id="form-link">Add Creator</label>
                             </div>
 
                         </div>
@@ -59,55 +59,33 @@
                             <div class="col-lg-12">
 
 
-                                <form id="deck-form" th:method="post" th:action="@{/decks/add}"
-                                      role="form" style="display: block;">
+                                <form id="creator-form" th:method="POST" enctype="multipart/form-data"
+                                      th:action="@{/creators/add}" role="form" style="display: block;" th:object="${creator}">
 
 
                                     <div class="form-group">
-                                        <input type="text" name="title" id="title" tabindex="1"
-                                               class="form-control" placeholder="Title" value="">
+                                        <input type="text" name="brand" id="brand" tabindex="1"
+                                               class="form-control" placeholder="Brand" value=""
+                                               th:field="*{name}" th:errorclass="invalid-field">
+                                        <div class="error"  th:text="${#strings.listJoin(#fields.errors('name'), '; ')}">
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" name="password" id="distributor" tabindex="2"
-                                               class="form-control" placeholder="Distributor">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="creator" tabindex="2"
-                                               class="form-control" placeholder="Creator">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="origin" id="origin" tabindex="2"
-                                               class="form-control" placeholder="Country of Origin">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="number" step="0.01" name="recommended-price" id="Price" tabindex="2"
-                                               class="form-control" placeholder="Recommended Price">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" step="0.01" name="description" id="description" tabindex="2"
-                                               class="form-control" placeholder="Description">
-                                    </div>
-                                    <div class="form-group">
-                                        <select class="selectpicker" multiple data-live-search="true" name="categories" required
-                                                th:field="*{categories}" th:errorclass="is-invalid"
-                                        >
-                                            <option value=""></option>
-                                            <option th:value="STANDARD">Standard</option>
-                                            <option th:value="GAME">Game</option>
-                                            <option th:value="MAGIC">Magic</option>
-                                            <option th:value="CARDISTRY">Cardistry</option>
-                                            <option th:value="VINTAGE">Vintage</option>
-                                            <option th:value="POKER">Poker</option>
-                                            <option th:value="GAFFED">Gaffed</option>
-                                            <option th:value="MARKED">Marked</option>
-                                        </select>
-                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('categories'), '; ')}"></div>
+                                        <input type="text" name="description" id="description" tabindex="2"
+                                               class="form-control" placeholder="Description"
+                                               th:field="*{description}" th:errorclass="invalid-field">
+                                        <div class="error"  th:text="${#strings.listJoin(#fields.errors('description'), '; ')}">
+                                        </div>
                                     </div>
                                     <div class="form-group" id="image-group">
                                         <label for="formFile" class="custom-file-upload">
                                             Click to upload images
                                         </label>
-                                        <input required class="form-control" type="file" id="formFile" multiple>
+                                        <input required class="form-control" type="file"
+                                               id="formFile" multiple accept=".jpg, .jpeg, .png"
+                                               th:field="*{pictures}" th:errorclass="invalid-field">
+                                        <div class="error"  th:text="${#strings.listJoin(#fields.errors('pictures'), '; ')}">
+                                        </div>
                                     </div>
 
                                     <table class="form-group" id="image-container">
