--- a/src/main/resources/templates/addDistributor.html
+++ b/src/main/resources/templates/addDistributor.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 
 
-    <link rel="stylesheet" href="../../css/addDistributor.css"/>
+    <link rel="stylesheet" href="../../css/addForm.css"/>
     <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
     <script src="../../js/sidebar.js" type="module"></script>
@@ -43,13 +43,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3" id="distributor-form-cont">
+            <div class="col-md-6 col-md-offset-3" id="form-cont">
                 <div class="panel panel-offer">
                     <div class="panel-heading">
                         <div class="row">
 
                             <div class="col">
-                                <label class="active" id="distributor-form-link">Add Distributor</label>
+                                <label class="active" id="form-link">Add Distributor</label>
                             </div>
 
                         </div>
@@ -112,8 +112,8 @@
 
                                     <div class="form-group">
                                         <div class="col-sm-6 col-sm-offset-3" id="submit-cont">
-                                            <input type="submit" name="distributor-submit" id="distributor-submit" tabindex="4"
-                                                   class="form-control btn btn-addDistributor" value="Create">
+                                            <input type="submit" name="add-submit" id="add-submit" tabindex="4"
+                                                   class="form-control btn btn-add" value="Create">
                                         </div>
                                     </div>
                                 </form>
