--- a/src/main/resources/templates/addCreator.html
+++ b/src/main/resources/templates/addCreator.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
     <script src="../../js/sidebar.js" type="module"></script>
+    <script src="../../js/showSelectedFiles.js" type="module"></script>
 
     <link rel="icon" href="../../images/ace-of-spades.png">
     <title>Victory</title>
@@ -89,16 +90,8 @@
                                     </div>
 
                                     <table class="form-group" id="image-container">
+                                        <thead><tr><th>Files Uploaded:</th></tr></thead>
                                         <tbody>
-                                        <tr>
-                                            <td>Files Uploaded:</td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                        </tr>
                                         </tbody>
                                     </table>
 
