--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -3,7 +3,7 @@
 @import "utils/defaults.css";
 
 body{
-    background: url(../images/page-header-bg.webp) center center repeat #0b1319;
+    background: url(../images/page-header-bg.jpg) center center repeat #0b1319;
 }
 
 .container{
