--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -2,6 +2,10 @@
 @import "utils/footer.css";
 @import "utils/defaults.css";
 
+body{
+    background: url(../images/page-header-bg.jpg) center center no-repeat #0b1319;
+}
+
 main{
     position: relative;
     display: block;
@@ -10,7 +14,6 @@ main{
     height: 88vh;
     padding: 15vh 20px 40px;
     text-align: center;
-    background: url(../images/page-header-bg.webp) center center no-repeat #0b1319;
     z-index: -1;
 
     font-weight: bolder;
