--- a/src/main/resources/static/css/deckDetails.css
+++ b/src/main/resources/static/css/deckDetails.css
@@ -4,7 +4,7 @@
 
 body{
     background-color: var(--light-black) !important;
-    background-image: url('../images/background-pattern.webp');
+    background-image: url('../images/background-pattern.jpg');
     background-position: center center;
     background-repeat: repeat;
 
