--- a/src/main/resources/templates/addDeck.html
+++ b/src/main/resources/templates/addDeck.html
@@ -60,39 +60,72 @@
                             <div class="col-lg-12">
 
 
-                                <form id="deck-form" th:method="post" th:action="@{/decks/add}"
-                                      role="form" style="display: block;">
+                                <form id="deck-form" th:method="post" th:action="@{/decks/add}" enctype="multipart/form-data"
+                                      role="form" style="display: block;" th:object="${deck}">
 
 
                                     <div class="form-group">
                                         <input type="text" name="title" id="title" tabindex="1"
-                                               class="form-control" placeholder="Title" value="">
+                                               class="form-control" placeholder="Title" value=""
+                                               th:field="*{title}" th:errorclass="invalid-field">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('title'), '; ')}">
+                                        </div>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="text" name="password" id="distributor" tabindex="2"
-                                               class="form-control" placeholder="Distributor">
+
+                                    <div class="form-group distributor">
+                                        <select class="selectpicker" data-live-search="true"
+                                                name="categories" required
+                                                th:field="*{distributorBrand}" th:errorclass="is-invalid">
+
+                                            <option value=""></option>
+                                            <option th:each="distributor : ${distributors}" th:value="${distributor}"
+                                                    th:text="${distributor}"></option>
+                                        </select>
+
+
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('distributorBrand'), '; ')}"></div>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="creator" tabindex="2"
-                                               class="form-control" placeholder="Creator">
+
+                                    <div class="form-group creator">
+                                        <select class="selectpicker" data-live-search="true"
+                                                name="categories" required
+                                                th:field="*{creatorName}" th:errorclass="is-invalid">
+
+                                            <option value=""></option>
+                                            <option th:each="creator : ${creators}" th:value="${creator}"
+                                                    th:text="${creator}"></option>
+                                        </select>
+
+
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('creatorName'), '; ')}"></div>
                                     </div>
+
                                     <div class="form-group">
-                                        <input type="password" name="origin" id="origin" tabindex="2"
-                                               class="form-control" placeholder="Country of Origin">
+                                        <input type="text" name="countryOfOrigin" id="origin" tabindex="2"
+                                               class="form-control" placeholder="Country of Origin"
+                                               th:field="*{countryOfOrigin}" th:errorclass="invalid-field">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('countryOfOrigin'), '; ')}">
+                                        </div>
                                     </div>
+
                                     <div class="form-group">
-                                        <input type="number" step="0.01" name="recommended-price" id="Price" tabindex="2"
-                                               class="form-control" placeholder="Recommended Price">
+                                        <input type="text" name="description" id="description" tabindex="2"
+                                               class="form-control" placeholder="Description"
+                                               th:field="*{description}" th:errorclass="invalid-field">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('description'), '; ')}">
+                                        </div>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="text" step="0.01" name="description" id="description" tabindex="2"
-                                               class="form-control" placeholder="Description">
-                                    </div>
-                                    <div class="form-group">
-                                        <select class="selectpicker" multiple data-live-search="true" name="categories" required
+
+                                    <div class="form-group category">
+                                        <select class="selectpicker" multiple data-live-search="true"
+                                                name="categories" required
                                                 th:field="*{categories}" th:errorclass="is-invalid"
                                         >
-                                            <option value=""></option>
                                             <option th:value="STANDARD">Standard</option>
                                             <option th:value="GAME">Game</option>
                                             <option th:value="MAGIC">Magic</option>
@@ -102,17 +135,29 @@
                                             <option th:value="GAFFED">Gaffed</option>
                                             <option th:value="MARKED">Marked</option>
                                         </select>
-                                        <div class="error" th:text="${#strings.listJoin(#fields.errors('categories'), '; ')}"></div>
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('categories'), '; ')}"></div>
                                     </div>
+
                                     <div class="form-group" id="image-group">
                                         <label for="formFile" class="custom-file-upload">
                                             Click to upload images
                                         </label>
-                                        <input required class="form-control" type="file" id="formFile" multiple>
+                                        <input required class="form-control" type="file" id="formFile"
+                                               multiple
+                                               th:field="*{pictures}" th:errorclass="invalid-field"
+                                               name="pictures">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('pictures'), '; ')}">
+                                        </div>
                                     </div>
 
                                     <table class="form-group" id="image-container">
-                                        <thead><tr><th>Files Uploaded:</th></tr></thead>
+                                        <thead>
+                                        <tr>
+                                            <th>Files Uploaded:</th>
+                                        </tr>
+                                        </thead>
                                         <tbody>
                                         </tbody>
                                     </table>
@@ -120,7 +165,8 @@
 
                                     <div class="form-group">
                                         <div class="col-sm-6 col-sm-offset-3" id="submit-cont">
-                                            <input type="submit" name="add-submit" id="add-submit" tabindex="4"
+                                            <input type="submit" name="add-submit" id="add-submit"
+                                                   tabindex="4"
                                                    class="form-control btn btn-add" value="Create">
                                         </div>
                                     </div>
