--- a/src/main/resources/templates/fragments/searchbar.html
+++ b/src/main/resources/templates/fragments/searchbar.html
@@ -4,4 +4,5 @@
         <input id="searchField" class="input" type="text" name="search" placeholder="Search">
         <input class="button btn" type="submit" name="submit" value="🔍"/>
     </form>
+<!--    todo: search functionality-->
 </th:block>
