--- a/src/main/resources/templates/offers.html
+++ b/src/main/resources/templates/offers.html
@@ -19,6 +19,9 @@
 
     <link rel="stylesheet" href="../../css/catalog.css"/>
 
+    <link rel="icon" href="../../images/ace-of-spades.png">
+    <title>Victory</title>
+
     <th:block th:replace="~{/fragments/head.html}"/>
 <body>
 <header>
