--- a/src/main/resources/static/css/utils/navigation.css
+++ b/src/main/resources/static/css/utils/navigation.css
@@ -235,6 +235,11 @@ li::before {
     background: none;
 }
 
+.sidebar-nav form input{
+    font-size: 16px;
+    font-weight: bold;
+}
+
 @media(min-width:768px) {
     #wrapper {
         padding-left: 0;
