--- a/src/main/resources/templates/addDeck.html
+++ b/src/main/resources/templates/addDeck.html
@@ -86,6 +86,7 @@
 
                                         <div class="error"
                                              th:text="${#strings.listJoin(#fields.errors('distributorBrand'), '; ')}"></div>
+                                        <div> <a target="_blank" th:href="@{/distributors/add}" class="addMissingInfoAnchor">Cannot find the distributor you are searching for?</a></div>
                                     </div>
 
                                     <div class="form-group creator">
@@ -101,6 +102,9 @@
 
                                         <div class="error"
                                              th:text="${#strings.listJoin(#fields.errors('creatorName'), '; ')}"></div>
+
+                                        <div> <a target="_blank" th:href="@{/creators/add}" class="addMissingInfoAnchor">Cannot find the creator you are searching for?</a></div>
+
                                     </div>
 
                                     <div class="form-group">
