--- a/src/main/resources/templates/addDeck.html
+++ b/src/main/resources/templates/addDeck.html
@@ -159,7 +159,7 @@
                                     <table class="form-group" id="image-container">
                                         <thead>
                                         <tr>
-                                            <th>Files Uploaded:</th>
+                                            <th>Files Uploaded(At least 1 is needed):</th>
                                         </tr>
                                         </thead>
                                         <tbody>
