--- a/src/main/resources/templates/addDistributor.html
+++ b/src/main/resources/templates/addDistributor.html
@@ -100,7 +100,7 @@
                                     </div>
 
                                     <table class="form-group" id="image-container">
-                                        <thead><tr><th>Files Uploaded:</th></tr></thead>
+                                        <thead><tr><th>Files Uploaded(At least 1 is needed):</th></tr></thead>
                                         <tbody>
                                         </tbody>
                                     </table>
