--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -23,7 +23,7 @@
     <script src="https://kit.fontawesome.com/b18db754f0.js" crossorigin="anonymous"></script>
 
     <script src="../../js/sidebar.js" type="module"></script>
-    <link rel="stylesheet" href="../../css/deckDetails.css"/>
+    <link rel="stylesheet" href="../../css/productDetails.css"/>
 
     <link rel="icon" href="../../images/ace-of-spades.png">
     <title>Victory</title>
