--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -8,7 +8,7 @@
         </span>
         <span id="user-nav" sec:authorize="isAuthenticated()">
                     <li><a th:href="@{/decks/all}">Catalog</a></li>
-                    <li class="user"><a th:href="@{/offers}">Offers</a></li>
+                    <li class="user"><a th:href="@{/offers/all}">Offers</a></li>
                     <li class="user"><a th:href="@{/wishlist}">Wishlist</a></li>
                     <li class="user"><a th:href="@{/users/profile/{username} (username=${#authentication.name})}">Profile</a></li>
                     <li id="logoutBtn" class="user">
