--- a/src/main/resources/templates/offerDetails.html
+++ b/src/main/resources/templates/offerDetails.html
@@ -23,7 +23,7 @@
     <script src="https://kit.fontawesome.com/b18db754f0.js" crossorigin="anonymous"></script>
 
     <script src="../../js/sidebar.js" type="module"></script>
-    <link rel="stylesheet" href="../../css/details.css"/>
+    <link rel="stylesheet" href="../../css/productDetails.css"/>
 
     <link rel="icon" href="../../images/ace-of-spades.png">
     <title>Victory</title>
@@ -43,18 +43,19 @@
 <main>
 
     <div class="container">
-        <div class="card">
+        <div class="card" th:object="${offer}">
             <div class="card-body">
-                <h3 class="card-title">Rounded Chair</h3>
+                <h3 class="card-title" th:text="|*{deckTitle} offer - *{status}|">Rounded Chair</h3>
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-6 image-cont">
-                        <div class="white-box text-center"><img src="https://via.placeholder.com/240x300/00CED1/000000" class="img-responsive"></div>
+                        <div class="white-box text-center">
+                            <img th:src="*{pictures[0]}" class="img-responsive">
+                        </div>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-6 description-details">
-                        <h4 class="box-title mt-5">Product description</h4>
-                        <p>Lorem Ipsum available,but the majority have suffered alteration in some form,by injected humour,or randomised words which don't look even slightly believable.but the majority have suffered alteration in some form,by injected humour</p>
-                        <h2 class="mt-5">
-                            $153
+                        <h4 class="box-title mt-5">Offer description</h4>
+                        <p th:text="*{description}"></p>
+                        <h2 class="mt-5" th:text="|*{price}€|">
                         </h2>
                         <button class="btn btn-dark btn-rounded mr-1 heart-btn liked" data-toggle="tooltip" title="" data-original-title="Add to cart">
                             <i class="fa-solid fa-heart"></i>
@@ -70,36 +71,20 @@
                             <table class="table table-striped table-product">
                                 <tbody>
                                 <tr>
-                                    <td>Title</td>
-                                    <td>Stellar</td>
+                                    <td>Deck</td>
+                                    <td><a th:href="@{/decks/{title} (title=*{deckTitle})}" th:text="*{deckTitle}"></a></td>
                                 </tr>
                                 <tr>
-                                    <td>Distributor</td>
-                                    <td>Knock Down</td>
+                                    <td>Seller</td>
+                                    <td><a th:href="@{/users/profile/{username} (username=*{sellerUsername})}" th:text="*{sellerUsername}"></a></td>
                                 </tr>
                                 <tr>
-                                    <td>Creator</td>
-                                    <td>Yes</td>
-                                </tr>
-                                <tr>
-                                    <td>Recommended price</td>
-                                    <td>Office Chair</td>
-                                </tr>
-                                <tr>
-                                    <td>Country</td>
-                                    <td>Office Chair</td>
-                                </tr>
-                                <tr>
-                                    <td>Categories</td>
-                                    <td>Office Chair</td>
+                                    <td>Available quantity</td>
+                                    <td th:text="*{quantity}"></td>
                                 </tr>
                                 <tr>
                                     <td>Reviews</td>
-                                    <td><a href="#">Office Chair</a></td>
-                                </tr>
-                                <tr>
-                                    <td>Offers</td>
-                                    <td><a href="#">Office Chair</a></td>
+                                    <td><a th:href="@{/offers/{id}/reviews (id=*{id})}">See all the reviews here</a></td>
                                 </tr>
                                 </tbody>
                             </table>
