--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -17,10 +17,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../../css/catalog.css"/>
-
-    <link rel="icon" href="../../images/ace-of-spades.png">
-    <title>Victory</title>
+    <link rel="stylesheet" th:href="@{/css/catalog.css}"/>
 
     <th:block th:replace="~{/fragments/head.html}"/>
 <body>
