--- a/src/main/resources/templates/offerDetails.html
+++ b/src/main/resources/templates/offerDetails.html
@@ -22,11 +22,8 @@
 
     <script src="https://kit.fontawesome.com/b18db754f0.js" crossorigin="anonymous"></script>
 
-    <script src="../../js/sidebar.js" type="module"></script>
-    <link rel="stylesheet" href="../../css/productDetails.css"/>
-
-    <link rel="icon" href="../../images/ace-of-spades.png">
-    <title>Victory</title>
+    <script th:src="@{/js/sidebar.js}" type="module"></script>
+    <link rel="stylesheet" th:href="@{/css/productDetails.css}"/>
 
     <th:block th:replace="~{/fragments/head.html}"></th:block>
 </head>
