--- a/src/main/resources/templates/creatorDetails.html
+++ b/src/main/resources/templates/creatorDetails.html
@@ -10,13 +10,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
-    <script src="../../js/sidebar.js" type="module"></script>
+    <script th:src="@{/js/sidebar.js}" type="module"></script>
 
-    <link rel="stylesheet" href="../../css/distributorDetails.css"/>
-    <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
-
-    <link rel="icon" href="../../images/ace-of-spades.png">
-    <title>Victory</title>
+    <link rel="stylesheet" th:href="@{/css/distributorDetails.css}"/>
+    <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrapNav.css}"/>
 
     <th:block th:replace="~{fragments/head.html}"></th:block>
 
